--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "extract": "ng xi18n --outputPath=src/locale",
     "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
     "serve:ssr": "cd dist && node server.js",
+    "pm2:ssr": "cd dist && pm2 start server.js",
     "build:client-and-server-bundles": "ng build --prod && ng build --prod --app 1 --output-hashing=false",
     "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
   },
