--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^2.0.1",
     "@ngx-universal/translate-loader": "^5.0.0",
+    "@types/node": "^10.11.7",
     "angular-datatables": "^5.0.0",
     "angular-froala-wysiwyg": "^2.7.1",
     "angular-in-memory-web-api": "~0.5.0",
